added Dashboard Page
fixed redux reeducer issues
always handle reducxers as you would any local data

--- a/react_recipebook/src/index.css
+++ b/react_recipebook/src/index.css
@@ -42,3 +42,18 @@ code {
 .nav-link{
   cursor: pointer;
 }
+
+.horizontal-card{
+  flex-direction: row;
+  width: 100%;
+}
+.horizontal-card .card-img{
+  width: 400px;
+}
+
+.fav-img{
+  height: 400px;
+}
+form{
+  width: 100%;
+}
